--- a/Source/static/css/styles.css
+++ b/Source/static/css/styles.css
@@ -227,6 +227,21 @@ input::-webkit-calendar-picker-indicator {
     padding-left: 5px;
 }
 
+#main_alert {
+    position: absolute;
+    left: 24px;
+    top: 76px;
+    z-index: 1;
+    font-size: 1.5rem;
+}
+
+#modal_alert {
+    position: absolute;
+    left: 300px;
+    top: 10px;
+    z-index: 1;
+}
+
 #GroupsList {
     position: relative;
     height: 300px;
