--- a/Source/templates/Function_Definition.html
+++ b/Source/templates/Function_Definition.html
@@ -157,7 +157,7 @@
 
             <div class="input-groups-data col-3">
                 <div class="function-input-row col-12">
-                    <label for="group_input">Groups</label>
+                    <label for="group_input">Groups <br> Membership</label>
                     <button type="button" name="button" id="newGroupButton" data-toggle="modal" data-target="#defineGroupModal">   <i class="fa fa-plus-circle" aria-hidden="true"></i> </button>
                 </div>
 
@@ -359,5 +359,4 @@
 <script src="../static/js/OctoUtils.js"></script>
 <script src="../static/js/Functions_Definitions.js"></script>
 <script src="../static/js/Functions_Definitions_Modal.js"></script>
-<script src="../static/js/OctoUtils.js"></script>
 {%endblock%}
