--- a/Source/static/css/styles.css
+++ b/Source/static/css/styles.css
@@ -36,8 +36,9 @@ button#newGroupButton {
     border None;
     background-color: #e8f9e9;
     border-style: none;
-    /* border-style: groove; */
+    font-size: 1.5rem;
     border-radius: 50%;
+    margin-left: 16px;
 }
 
 .some_datalist {
@@ -170,8 +171,8 @@ input::-webkit-calendar-picker-indicator {
 }
 
 .fas {
-    FONT-WEIGHT: 100;
-    font-size: 2rem;
+    /* font-weight: 100; */
+    font-size: 1.5rem;
     margin-right: 10px;
 }
 
