--- a/Source/templates/run_simple.html
+++ b/Source/templates/run_simple.html
@@ -3,12 +3,7 @@
 <link rel="stylesheet" href="../static/css/draggable_list.css"> {% endblock %} {% block content %}
 <!-- <center> -->
 <div dir="ltr" class="row col-12" id=main_form>
-    <div class="alert alert-warning alert-dismissible fade show" role="alert" hidden="hidden">
-        <strong id="dissmisable_alert_text"></strong>
-        <button type="button" class="close" data-hide="alert" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-    </div>
+
     <div class="card run-select-card">
         <div class="card-header run-select-card-header">
             <h2>Runs</h2>
@@ -86,8 +81,14 @@
                         <div>
                             <select class="form-control" id="mission_id_select"></select>
                         </div>
-                        <div>
+                        <div class="row ml-2">
                             <button class="btn btn-lg btn-success ml-1" id='display_button'>display</button>
+                            <div class="alert alert-warning alert-dismissible fade show" role="alert" hidden="hidden">
+                                <strong id="dissmisable_alert_text"></strong>
+                                <button type="button" class="close" data-hide="alert" aria-label="Close">
+                                  <span aria-hidden="true">&times;</span>
+                                </button>
+                            </div>
                         </div>
 
 
@@ -114,8 +115,8 @@
         </table>
     </div>
     <div class="row m-3 col-12">
-        <div id="drill_down_div" class="col-4 mt-4">
-            <div class="row card">
+        <div id="drill_down_div" class="col-4 mt-4 card">
+            <div class="row">
                 <div class="result-output-text card-body">
 
                     <h1 id="drill_down_header"></h1>
