--- a/Source/static/css/layout_style.css
+++ b/Source/static/css/layout_style.css
@@ -10,24 +10,28 @@
     border-color: blueviolet;
     border-style: dashed;
     /* object-fit: scale-down; */
-  }
+}
 
-  .octopus-img:hover{
+.octopus-img:hover {
     border-color: goldenrod;
     border-style: dashed 5px;
     /* object-fit: scale-down; */
-  }
+}
 
 h6 {
     display: inline-block;
 }
 
-.nav-item {
-  text-align: center;
-  margin: 0 10px 0;
+#ProjectsDropdownMenu {
+    display: inline-block;
 }
+
+.nav-item {
+    text-align: center;
+    margin: 0 10px 0;
+}
+
 
 /* #window-title-div{
   margin: auto;
 } */
-
