--- a/Source/templates/user_wizard.html
+++ b/Source/templates/user_wizard.html
@@ -1,10 +1,5 @@
-{% extends "layout.html"%} 
-
-{% block css %}
-<link rel="stylesheet" href="../static/css/user_wizard.css" />
-{% endblock %} 
-
-{%block content%}
+{% extends "layout.html"%} {% block css %}
+<link rel="stylesheet" href="../static/css/user_wizard.css" /> {% endblock %} {%block content%}
 
 <div class="alert alert-warning alert-dismissible fade show" role="alert" hidden="hidden">
     <strong id="dissmisable_alert_text"></strong>
@@ -13,124 +8,128 @@
     </button>
 </div>
 <div class="row mx-4 my-1">
-  <div class = "col-6 mr-auto jumbotron">
-    <h1>Define a New User</h1>
+    <div class="col-6 mr-auto jumbotron">
+        <h1>Define a New User</h1>
 
 
-    <div class="row">
-        <div class="col-5">
-            <label for="first_name">First Name</label>
-            <input type="text" id="first_name" class="form-control">
-            </input>
+        <div class="row">
+            <div class="col-5">
+                <label for="first_name">First Name</label>
+                <input type="text" id="first_name" class="form-control">
+                </input>
+            </div>
+            <div class="col-5">
+                <label for="last_name">Last Name</label>
+                <input class="form-control" type="text" id="last_name" />
+            </div>
         </div>
-        <div class="col-5">
-            <label for="last_name">Last Name</label>
-            <input class="form-control" type="text" id="last_name" />
+
+        <div class="row">
+            <div class="col-5">
+                <label for="project">Projects</label>
+                <div class="project_ul_div">
+                    <ul class="project-ul" id="project"></ul>
+                </div>
+            </div>
+            <div class="col-5">
+                <label for="team">Team</label>
+                <select class="form-control" type="text" id="team"></select>
+            </div>
         </div>
+
+        <div class="row">
+            <div class="col-5">
+                <label for="role">Role</label>
+                <select class="form-control" type="text" id="role"></select>
+            </div>
+            <div class="col-5">
+                <label for="max_priority">Max Priority</label>
+                <input class="form-control" type="number" id="max_priority" />
+            </div>
+        </div>
+
+        <br>
+        <input class="btn btn-lg btn-success" type="button" value="Save" id="save_button" />
     </div>
 
-    <div class="row">
-        <div class="col-5">
-            <label for="project">Project</label>
-            <select class="form-control" type="text" id="project"></select>
+    <div class="col-6 ml-auto jumbotron bg-light">
+        <h1>Existing Users</h1>
+        <div class="row">
+            <div class="col-10">
+                <label for="user_select">Nick Names:</label>
+                <select class="form-control success-outline" name="current_connections" id="user_select"></select>
+            </div>
         </div>
-        <div class="col-5">
-            <label for="team">Team</label>
-            <select class="form-control" type="text" id="team"></select>
-        </div>
-    </div>
-
-    <div class="row">
-        <div class="col-5">
-            <label for="role">Role</label>
-            <select class="form-control" type="text" id="role"></select>
-        </div>
-        <div class="col-5">
-            <label for="max_priority">Max Priority</label>
-            <input class="form-control" type="number" id="max_priority" />
-        </div>
-    </div>
-
-    <br>
-    <input class="btn btn-lg btn-success" type="button" value="Save" id="save_button" />
-  </div>
-
-  <div  class = "col-6 ml-auto jumbotron bg-light">
-    <h1>Existing Users</h1>
-    <div class="row">
-        <div class="col-10">
-            <label for="user_select">Nick Names:</label>
-            <select class="form-control success-outline" name="current_connections" id="user_select"></select>
-        </div>
-    </div>
-    <!-- <div class="row">
+        <!-- <div class="row">
         <div class="col-5">
             <label for="disp_nick_name">Nick Name</label>
             <text class="form-control" id="disp_nick_name"></text>
         </div>
     </div> -->
-    <div class="row">
-        <div class="col-5">
-            <label for="disp_first_name">First Name</label>
-            <text class="form-control" id="disp_first_name"></text>
+        <div class="row">
+            <div class="col-5">
+                <label for="disp_first_name">First Name</label>
+                <text class="form-control" id="disp_first_name"></text>
+            </div>
+            <div class="col-5">
+                <label for="disp_last_name">Last Name</label>
+                <text class="form-control" id="disp_last_name"></text>
+            </div>
         </div>
-        <div class="col-5">
-            <label for="disp_last_name">Last Name</label>
-            <text class="form-control" id="disp_last_name"></text>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-5">
-            <label for="disp_project">Project </label>
-            <select class="form-control" id="disp_project"></select>
-        </div>
-        <div class="col-5">
-            <label for="disp_team">Team </label>
-            <select class="form-control" id="disp_team"></select>
-        </div>
+        <div class="row">
+            <div class="col-5">
+                <label for="disp_project">Project </label>
+                <div class="project_ul_div">
+                    <ul class="project-ul" id="disp_project"></ul>
+                </div>
+            </div>
+            <div class="col-5">
+                <label for="disp_team">Team </label>
+                <select class="form-control" id="disp_team"></select>
+            </div>
 
-    </div>
-    <div class="row">
-        <div class="col-5">
-            <label for="disp_role">Role </label>
-            <select class="form-control" id="disp_role"></select>
         </div>
-        <div class="col-5">
-            <label for="disp_max_priority">Max Priority </label>
-            <input type="number" class="form-control" id="disp_max_priority"></input>
+        <div class="row">
+            <div class="col-5">
+                <label for="disp_role">Role </label>
+                <select class="form-control" id="disp_role"></select>
+            </div>
+            <div class="col-5">
+                <label for="disp_max_priority">Max Priority </label>
+                <input type="number" class="form-control" id="disp_max_priority"></input>
+            </div>
         </div>
-    </div>
-    <input class="btn btn-lg btn-success mt-4" type="button" value="Save Changes" id="save_changes_button" />
-    <input class="btn btn-lg btn-warning mt-4 mr-auto" type="button" value="Reset Password" id="reset_password_button" />
-    <input class="btn btn-lg btn-danger mt-4 mr-auto" type="button" value="Delete" id="delete_user_button" data-toggle="modal" data-target="#exampleModalCenter"/>
-    <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered" role="document">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h5 class="modal-title" id="exampleModalLongTitle">Confirm Delete</h5>
-              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+        <input class="btn btn-lg btn-success mt-4" type="button" value="Save Changes" id="save_changes_button" />
+        <input class="btn btn-lg btn-warning mt-4 mr-auto" type="button" value="Reset Password" id="reset_password_button" />
+        <input class="btn btn-lg btn-danger mt-4 mr-auto" type="button" value="Delete" id="delete_user_button" data-toggle="modal" data-target="#exampleModalCenter" />
+        <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLongTitle">Confirm Delete</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
               </button>
+                    </div>
+                    <div class="modal-body" id=delete_user_modal_body>
+
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                        <button type="button" class="btn btn-primary" data-dismiss="modal" id=confirm_delete_button>Confirm Delete</button>
+                    </div>
+                </div>
             </div>
-            <div class="modal-body" id=delete_user_modal_body>
-              
-            </div>
-            <div class="modal-footer">
-              <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-              <button type="button" class="btn btn-primary" data-dismiss="modal" id=confirm_delete_button>Confirm Delete</button>
-            </div>
-          </div>
         </div>
-      </div>
-  </div>
+    </div>
 </div>
 <!-- Button trigger modal -->
 <!-- <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalCenter">
     Launch demo modal
   </button> -->
-  
-  <!-- Modal -->
-  
+
+<!-- Modal -->
+
 {% endblock %} {% block scripts%}
 <!-- <script src="../static/js/jquery_3_4_1_min.js"></script> -->
 <script src="../static/js/user_wizard.js"></script>
