--- a/Source/static/css/db_conn_wizard.css
+++ b/Source/static/css/db_conn_wizard.css
@@ -4,6 +4,13 @@
     top: 76px;
     z-index: 1;
 }
+
 body {
     height: 70%;
+}
+
+.jumbotron {
+    padding-top: 30px;
+    padding-bottom: 10px;
+    margin-bottom: 10px;
 }
