--- a/Source/templates/run_simple.html
+++ b/Source/templates/run_simple.html
@@ -115,7 +115,7 @@
     </div>
     <div class="row m-3 col-12">
         <div id="drill_down_div" class="col-4 mt-4">
-            <div class="row card">
+            <div class="row">
                 <div class="result-output-text card-body">
 
                     <h1 id="drill_down_header"></h1>
