added datatables and RunList class

--- a/Source/templates/Function_Definition.html
+++ b/Source/templates/Function_Definition.html
@@ -112,8 +112,8 @@
                 <div class="row">
                     <div class="function-input-row col-10">
                         <label>Function Location</label>
-                        <input class="form-control" type="text" id="functionLocation" name="Location"></input>
-
+                        <input list="location_datalist" class="form-control" type="text" id="functionLocation" name="Location"></input>
+                        <datalist id=location_datalist></datalist>
                         <!--
                       <div class="custom-file input-group">
                         <input class="custom-file-input" type="file" id="functionLocation" name="location" aria-describedby="myInput">
