--- a/Source/templates/layout.html
+++ b/Source/templates/layout.html
@@ -48,7 +48,8 @@
             <!-- Nav Bar -->
             <nav class="my-navbar navbar navbar-expand-lg navbar-dark bg-dark">
                 <div class="col-4">
-                    <a class="navbar-brand" href="/welcome"><img data-toggle="tooltip" data-placement="left" title="Tooltip on left" class="octopus-img" src="../static/images/octopus-gentelman-1.png" alt="" />
+                    <a class="navbar-brand" href="/welcome"><span style='font-size:30px;'>&#128025;</span>
+                        <!-- <img data-toggle="tooltip" data-placement="left" title="Tooltip on left" class="octopus-img" src="../static/images/octopus-gentelman-1.png" alt="" /> -->
                         <h6 class="user-name">{{session['username']}}</h6>
                     </a>
                     <a class="nav-link dropdown-toggle" href="#" id="ProjectsDropdownMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
