--- a/Source/templates/metadata_layout.html
+++ b/Source/templates/metadata_layout.html
@@ -16,52 +16,118 @@
         <button id = "meta_save" aria-label="Save"><i class="far fa-save normal-size" ></i></button>
         <button id = "meta_duplicate"><i class="far fa-file-alt adapt-icon-size"></i></button>
         <button id = "meta_delete"><i class="far fa-trash-alt adapt-icon-size"></i></button>
+        {% if session['current_window_name']=='Define Function' %}
+        <button id = "meta_edit"><i class="fa fa-pencil-alt adapt-icon-size"></i></button>
+        <div id="main_alert" class="alert alert-warning alert-dismissible fade show meta_alert" role="alert" hidden="hidden">
+            <strong id="main_dissmisable_alert_text"></strong>
+            <button type="button" id = "main_alert_button" class="close" data-hide="alert" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+        {% endif %}
+<!-- style = "padding-top: 5px; padding-bottom: 5px;" -->
     </div>
     <div class="row mx-auto">
 
         <div class="meta_data card border-secondary">
             <div class="card-body">
 
-                <div class="row margins-bottom-medium">
-                    <div class="col-8">
-                        <label for="meta_name"><h5>Name</h5></label>
-                        <input list="meta_name_datalist" type="text" class="form-control" id="meta_name">
-                        <datalist id='meta_name_datalist'>
-                          <option value="global">kjsdhfskjdf</option>
-                        </datalist>
-                    </div>
-                    <div class="col-4">
-                        <label for="meta_id"><h5>Id</h5></label>
-                        <input type="text" class="form-control" id="meta_id">
-                    </div>
+              {% if session['current_window_name']=='Define Function' %}
+
+              <div class="row margins-bottom-medium">
+
+                <div class="col-11">
+                    <label for="meta_function_name"><h5>Function Name</h5></label>
+                    <input list="meta_name_datalist" type="text" class="form-control" id="meta_function_name">
+                    <datalist id='meta_name_datalist'>
+                      <option value="global">kjsdhfskjdf</option>
+                    </datalist>
                 </div>
-                {% if session['current_window_name']=='Define Stage' %}
-                <div class="row margins-bottom-medium">
-                    <div class="col-6">
-                        <label for="meta_type"><h5>Type</h5></label>
-                        <select class="form-control" id="meta_type">
-                            <option value="Run System">Run System</option>
-                            <option value="Analyse">Analyse</option>
-                        </select>
-                    </div>
-                    <div class="col-6">
-                        <label for="meta_concequences"><h5>Concequences</h5></label>
-                        <select class="form-control" id="meta_concequences">
-                            <option value="Critical">Critical</option>
-                            <option value="Warning">Warning</option>
-                            <option value="Light">Light</option>
-                            <option value="None">None</option>
-                        </select>
-                    </div>
+
+                <div class="col-9">
+
+                    <label for="meta_owner"><h5> User</h5></label>
+                    <input list="meta_owner_datalist" type="text" class="form-control" id="meta_owner">
+                    <datalist id='meta_owner_datalist'>
+                      <option value="ami">ami</option>
+                      <option value="dvirh">dvirh</option>
+                      <option value="ilans">ilans</option>
+                    </datalist>
+
                 </div>
+
+                <div class="col-6">
+                    <label><h5>Status</h5></label>
+                    <select class="form-control" type="text" name="meta_status">
+                      <option value="Needed">Needed</option>
+                      <option value="In Dev">In Dev</option>
+                      <option value="Complete">Complete</option>
+                    </select>
+                </div>
+
+                <div class = "col-11">
+                  <hr>
+                </div>
+
+
+                <div class = "form-inline col-12">
+                  <label><h6>Changed Date</h6></label>
+                  <input class="form-control" name="changed_date" type="text" value="02/02/2020 15:20" disabled></input>
+                </div>
+
+                <div class = "form-inline col-12">
+                  <label><h6>Last Changed by:</h6> </label>
+                  <p id = "function_last_changed_by" class="font-italic function-change-name"> &nbsp ami</p>
+                </div>
+          </div>
+
+              {% else %}
+
+
+                    <div class="row margins-bottom-medium">
+                        <div class="col-8">
+
+                            <label for="meta_name"><h5>Name</h5></label>
+                            <input list="meta_name_datalist" type="text" class="form-control" id="meta_name">
+                            <datalist id='meta_name_datalist'>
+                              <option value="global">kjsdhfskjdf</option>
+                            </datalist>
+                        </div>
+                        <div class="col-4">
+                            <label for="meta_id"><h5>Id</h5></label>
+                            <input type="text" class="form-control" id="meta_id">
+                        </div>
+                    </div>
+                      {% if session['current_window_name']=='Define Stage' %}
+                          <div class="row margins-bottom-medium">
+                              <div class="col-6">
+                                  <label for="meta_type"><h5>Type</h5></label>
+                                  <select class="form-control" id="meta_type">
+                                      <option value="Run System">Run System</option>
+                                      <option value="Analyse">Analyse</option>
+                                  </select>
+                              </div>
+                              <div class="col-6">
+                                  <label for="meta_concequences"><h5>Concequences</h5></label>
+                                  <select class="form-control" id="meta_concequences">
+                                      <option value="Critical">Critical</option>
+                                      <option value="Warning">Warning</option>
+                                      <option value="Light">Light</option>
+                                      <option value="None">None</option>
+                                  </select>
+                              </div>
+                          </div>
+                      {% endif %}
+
+                    <label for="meta_owner"><h5>Owner</h5></label>
+                    <input type="text" class="form-control margins-bottom-medium" id="meta_owner">
+                    <label for="meta_tags"><h5>Tags</h5></label>
+                    <input type="text" class="form-control margins-bottom-medium" id="meta_tags">
+                    <label for="meta_description"><h5>Description</h5></label>
+                    <textarea class="form-control margins-bottom-medium" name="" id="meta_description" cols="10" rows="2"></textarea>
+                    <h6><i id = "meta_date">changed date : 16:00 27.5.2020</i></h6>
                 {% endif %}
-                <label for="meta_owner"><h5>Owner</h5></label>
-                <input type="text" class="form-control margins-bottom-medium" id="meta_owner">
-                <label for="meta_tags"><h5>Tags</h5></label>
-                <input type="text" class="form-control margins-bottom-medium" id="meta_tags">
-                <label for="meta_description"><h5>Description</h5></label>
-                <textarea class="form-control margins-bottom-medium" name="" id="meta_description" cols="10" rows="2"></textarea>
-                <h6><i id = "meta_date">changed date : 16:00 27.5.2020</i></h6>
+
             </div>
 
         </div>
