--- a/Source/templates/define_func.html
+++ b/Source/templates/define_func.html
@@ -64,7 +64,10 @@
                   <div class="row marginTopLeft">
                       <div class="function-input-row col-11">
                           <label>Function Location</label>
-                          <input class="form-control" type="text" id="functionLocation" name="Location"></input>
+                          <input list="location_datalist" class="form-control" type="text" id="functionLocation" name="Location"></input>
+                          <datalist id=location_datalist></datalist>
+
+
                       </div>
                   </div>
 
