--- a/Source/templates/new_analyse.html
+++ b/Source/templates/new_analyse.html
@@ -7,12 +7,7 @@
         <h2>Setup</h2>
         <div class="flex-container mt-2">
             <button id="collapse_setup_button" class="collapse-button" data-toggle="collapse" data-target="#SetupContent"><i class="far fa-plus-square"></i></button>
-            <!-- <div> -->
-            <!-- <div class="row layout-buttons-div normal-margin"> -->
-            <input id="NewExist_toggle" type="checkbox" checked data-toggle="toggle" data-on="New" data-off="Existing" data-onstyle="primary" data-offstyle="secondary">
-            <!-- <button id="meta_save" aria-label="Save"><i class="far fa-save normal-size" ></i></button>
-                <button id="meta_duplicate"><i class="far fa-file-alt adapt-icon-size"></i></button>
-                <button id="meta_delete"><i class="far fa-trash-alt adapt-icon-size"></i></button> -->
+            <input id="setup_toggle" type="checkbox" checked data-toggle="toggle" data-on="New" data-off="Existing" data-onstyle="primary" data-offstyle="secondary">
             <input type="text" class="form-control normal-margin col-2">
 
             <div id="statistics_div" class="row statistics-div col-5 normal-margin">
@@ -21,9 +16,7 @@
             <button class="btn btn-primary normal-margin run-button">
                 Run
             </button>
-            <!-- </div> -->
         </div>
-        <!-- </div> -->
     </div>
 
 
@@ -51,6 +44,14 @@
                 </table>
             </div>
             <div id="runs_table_div" class="col-6" hidden="hidden">
+                <div class="flex-container my-4">
+                    <label for="database_select" class="mr-2">Select a DB</label>
+                    <select name="" id="database_select" class="form-control col-2">
+                        <option value="">db1</option>
+                        <option value="">db2</option>
+                        <option value="">db3</option>
+                    </select>
+                </div>
                 <table id="runs_table" class="table table-striped table-bordered" style="width:100%">
                 </table>
             </div>
@@ -97,27 +98,16 @@
 <div class="card">
     <div id="AnalyseMIssionHeader" class="card-header">
         <h2>Analyse Mission</h2>
-        <!-- <div class="progress">
-            <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:70%">
-                70%
-            </div>
-        </div> -->
         <h4><span class="badge badge-success">75% Completed</span></h4>
         <div class="progress">
-            <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%"></div>
-
+            <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%">
+            </div>
         </div>
         <div class="flex-container mt-2">
-            <button class="collapse-button" data-toggle="collapse" data-target="#AnalyseContent">&#9193;</button>
-            <!-- <div> -->
-            <!-- <div class="row layout-buttons-div normal-margin"> -->
-            <!-- <input id="NewExist_toggle" type="checkbox" checked data-toggle="toggle" data-on="New" data-off="Existing" data-onstyle="primary" data-offstyle="secondary"> -->
-            <!-- <button id="meta_save" aria-label="Save"><i class="far fa-save normal-size" ></i></button>
-                <button id="meta_duplicate"><i class="far fa-file-alt adapt-icon-size"></i></button>
-                <button id="meta_delete"><i class="far fa-trash-alt adapt-icon-size"></i></button> -->
+            <button id="collapse_analyse_button" class="collapse-button" data-toggle="collapse" data-target="#AnalyseContent"><i class="far fa-plus-square"></i></button>
             <h4>Mission Name</h4>
             <input type="text" class="form-control normal-margin col-2" value="Setup_Name123">
-
+            <button id="display_mission" class="btn btn-outline-success">Display</button>
             <div id="statistics_div" class="row statistics-div col-5 normal-margin">
                 20 functions on 10 runs : 140/200 completed
             </div>
@@ -126,9 +116,7 @@
                 <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
                 &nbsp; Running...
             </button>
-            <!-- </div> -->
         </div>
-        <!-- </div> -->
     </div>
 
 
@@ -156,5 +144,6 @@
     </div>
 </div>
 <br><br> {% endblock %} {%block scripts%}
+<script src="../static/js/new_analyse_tables.js"></script>
 <script src="../static/js/new_analyse_setup.js"></script>
-<script src="../static/js/new_analyse_tables.js"></script>{% endblock %}
+{% endblock %}
