function define last updated

--- a/Source/templates/define_func.html
+++ b/Source/templates/define_func.html
@@ -244,7 +244,7 @@
 
                               <div class = "form-inline col-12">
                                 <label><h6>Last Changed by:</h6> </label>
-                                <p class="font-italic modal-change-name"> &nbsp ami</p>
+                                <p  class="font-italic modal-change-name" style = "margin-left: 5px;" >  ami</p>
                               </div>
 
                             </div>
