--- a/Source/templates/metadata_layout.html
+++ b/Source/templates/metadata_layout.html
@@ -72,12 +72,14 @@
 
                 <div class = "form-inline col-12">
                   <label><h6>Changed Date</h6></label>
-                  <input class="form-control" name="changed_date" type="text" value="02/02/2020 15:20" disabled></input>
+                  <input class="form-control" name="changed_date" type="text" value="02/02/2020 15:20" disabled 
+                   style = "padding-top: 5px; padding-bottom: 5px; margin-left: 5px; width: 200px;
+                   font-size: small;" ></input>
                 </div>
 
                 <div class = "form-inline col-12">
                   <label><h6>Last Changed by:</h6> </label>
-                  <p id = "function_last_changed_by" class="font-italic function-change-name"> &nbsp ami</p>
+                  <p id = "function_last_changed_by" class="font-italic function-change-name" style = "margin-left: 5px;" > ami</p>
                 </div>
           </div>
 
