--- a/Source/templates/new_analyse.html
+++ b/Source/templates/new_analyse.html
@@ -40,6 +40,9 @@
             <li class="nav-item">
                 <button id="runs_tab" class="nav-link"><i class="fas fa-running"></i>&nbsp;Runs</button>
             </li>
+            <li class="nav-item">
+                <button id="lists_tab" class="nav-link"><i class="fas fa-list-ol"></i>&nbsp;Lists</button>
+            </li>
         </ul>
         <div class="content-flex-container">
             <div id="functions_table_div" class="col-6">
@@ -48,6 +51,10 @@
             </div>
             <div id="groups_table_div" class="col-6" hidden="hidden">
                 <table id="groups_table" class="table table-striped table-bordered" style="width:100%">
+                </table>
+            </div>
+            <div id="lists_table_div" class="col-6" hidden="hidden">
+                <table id="lists_table" class="table table-striped table-bordered" style="width:100%">
                 </table>
             </div>
             <div id="runs_table_div" class="col-6" hidden="hidden">
@@ -77,11 +84,14 @@
                         <h6><span class="badge badge-secondary">Total: 0 Functions</span></h6>
                     </div>
                     <div id="chosen_runs_div">
-                        <h4> Chosen Runs</h4>
+                        <div class="row col-12">
+                            <h4> Chosen Runs &nbsp;&nbsp;</h4>
+                            <button class="fas-button"><i class="far fa-save"></i></button>
+                        </div>
                         <select multiple id="chosen_runs_select" size="6">
                             <option value="bla" disabled>-----------------------chosen runs---------------------</option>
                         </select>
-                        <span><button id="remove_run_button" class=" fas-button"><i class="far fa-trash-alt"></i></span></button>
+                        <span><button id="remove_run_button" class="fas-button"><i class="far fa-trash-alt"></i></button></span>
                         <br>
                         <h6><span class="badge badge-secondary">Total: 0 Runs</span></h6>
                     </div>
