--- a/Source/static/css/new_analyse.css
+++ b/Source/static/css/new_analyse.css
@@ -68,6 +68,10 @@ span.toggle-handle.btn.btn-default {
     padding-left: 20px;
 }
 
+#AnalyseContent table td .center-spinner {
+    margin: 30px;
+}
+
 select[multiple] {
     overflow-y: auto;
 }
@@ -89,4 +93,24 @@ select[multiple] {
     display: flex;
     flex-direction: column-reverse;
     /* justify-content: flex-end; */
+}
+
+#chosen_runs_div .fas-button i,
+#chosen_functions_div .fas-button i {
+    font-size: 2rem;
+}
+
+#chosen_runs_div span,
+#chosen_functions_div span {
+    font-size: 1rem;
+}
+
+#num_of_tests {
+    align-self: center;
+    font-size: 1.5rem;
+}
+
+.card {
+    border-width: 3px;
+    border-color: rgb(33, 20, 220);
 }
