--- a/Source/templates/define_func.html
+++ b/Source/templates/define_func.html
@@ -231,89 +231,89 @@
 
                               <div class="form-inline col 11 modal_seperator_line">
                                   <label for="Modal_Group_Description"><h6>Description</h6></label>
-                                  <textarea id="Modal_Group_Description" class="form-control" name="description" cols="16" rows="5"></textarea>
+                                  <textarea id="Modal_Group_Description" class="form-control" name="description" cols="20" rows="3"></textarea>
                               </div>
 
 
                               <hr>
                               <div class = "form-inline col-12">
                                 <label><h6>Changed Date</h6></label>
-                                <p class="font-italic modal-change-name" name="modal_changed_date"> &nbsp 02/02/2020 15:20</p>
+                                <p class="font-italic modal-change-name" name="modal_changed_date" id ="modal_changed_date"> &nbsp 02/02/2020 15:20</p>
                                 <!-- <input class="form-control" name="modal_changed_date" type="text" value="02/02/2020 15:20" disabled></input> -->
                               </div>
 
                               <div class = "form-inline col-12">
                                 <label><h6>Last Changed by:</h6> </label>
-                                <p  class="font-italic modal-change-name" style = "margin-left: 5px;" >  ami</p>
+                                <p  class="font-italic modal-change-name"  id ="modal_changed_by" style = "margin-left: 5px;" >  ami</p>
                               </div>
 
                             </div>
                         </div>
 
 
-                        <!-- ////////////////// modal right card //////////////////-->
+                    <!-- ////////////////// modal right card //////////////////-->
+                    <div class="modal_main_data card border-secondary">
+                        <div class="card-body">
 
-                        <div class="modal_main_data card border-secondary">
-                          <div class="card-body">
+                                <div class="form-inline col-12">
+                                    <label id="functions_select_label" for="functions_modal_select"><h6>select a function to the list</h6></label>
+                                </div>
 
-                                  <div class="form-inline col-12">
-                                      <label id="functions_select_label" for="functions_modal_select"><h6>select a function</h6></label>
-                                  </div>
+                                <div class="form-inline col-12">
+                                  <label for="modal_filter_owner"  class="modal_filter_icon"> <i class="fa fa-filter modal_filter_icon" ></i></label>
+                                  <input list="modal_filter_owner_datalist" type="text" class="form-control Modal_filter"
+                                        id="modal_filter_owner" placeholder="Owenr">
+                                  <datalist id='modal_filter_owner_datalist'>
+                                    <option value="ami">ami</option>
+                                    <option value="dvirh">dvirh</option>
+                                    <option value="ilans">ilans</option>
+                                  </datalist>
+                                  <input class="form-control Modal_filter_Tags" type="text"  id="modal_filter_Tags" placeholder="Tags" ></input>
 
-                                  <div class="form-inline col-12">
-                                    <label for="modal_filter_owner"  class="modal_filter_icon"> <i class="fa fa-filter modal_filter_icon" ></i></label>
-                                    <input list="modal_filter_owner_datalist" type="text" class="form-control Modal_filter"
-                                          id="modal_filter_owner" placeholder="Owenr">
-                                    <datalist id='modal_filter_owner_datalist'>
-                                      <option value="ami">ami</option>
-                                      <option value="dvirh">dvirh</option>
-                                      <option value="ilans">ilans</option>
-                                    </datalist>
+                                  <!-- <div class="">
+                                    <input class="form-control Modal_filter_Tags" type="text"  id="modal_filter_Tags" placeholder="Tags"></input>
+                                  </div> -->
 
-                                    <div class="">
-                                      <input class="form-control Modal_filter_Tags" type="text"  id="modal_filter_Tags" placeholder="Tags"></input>
+                                </div>
+
+
+                                <div class="form-inline col-12">
+                                    <div class="input-group mb-3">
+                                        <input list="modal_datalist" class="form-control input" name="functions" id="functions_modal_select" aria-label="Recipient's username" aria-describedby="basic-addon2">
+                                        <div class="input-group-append">
+                                            <button class="btn btn-outline-secondary add" type="button" id="add_function_button">Add</button>
+                                        </div>
+                                        <button type="button" id = "function_group_dropdown_menu" class="btn btn-outline-secondary dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                            <span class="sr-only">Toggle Dropdown</span>
+                                          </button>
+                                        <div class="dropdown-menu">
+                                            <button id="functions_option" class="dropdown-item dropdown-selected">Function</button>
+                                            <div role="separator" class="dropdown-divider"></div>
+                                            <button id="groups_option" class="dropdown-item">Group</button>
+                                        </div>
+                                        <datalist id="modal_datalist">
+
+                                        </datalist>
                                     </div>
 
-                                  </div>
+                                </div>
 
+                                <div class="form-inline col 11 modal_seperator_line">
+                                    <label id="Description_functions_Group_label" for="Modal_GroupFunction_Description"><h6>Description</h6></label>
+                                    <textarea id="Modal_GroupFunction_Description" class="form-control" name="description" cols="8" rows="2"></textarea>
+                                </div>
 
-                                  <div class="form-inline col-12">
-                                      <div class="input-group mb-3">
-                                          <input list="modal_datalist" class="form-control input" name="functions" id="functions_modal_select" aria-label="Recipient's username" aria-describedby="basic-addon2">
-                                          <div class="input-group-append">
-                                              <button class="btn btn-outline-secondary add" type="button" id="add_function_button">Add</button>
-                                          </div>
-                                          <button type="button" class="btn btn-outline-secondary dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                              <span class="sr-only">Toggle Dropdown</span>
-                                            </button>
-                                          <div class="dropdown-menu">
-                                              <button id="functions_option" class="dropdown-item dropdown-selected">Function</button>
-                                              <div role="separator" class="dropdown-divider"></div>
-                                              <button id="groups_option" class="dropdown-item">Group</button>
-                                          </div>
-                                          <datalist id="modal_datalist">
+                                <hr>
+                                <div class="col-12">
+                                    <label for="chosen_list" class=""><h6>Chosen list:</h6></label>
+                                    <ul class='draggble_ul list-div' id="modal_ul">
 
-                                          </datalist>
-                                      </div>
+                                    </ul>
+                                </div>
 
-                                  </div>
+                          </div>
 
-                                  <div class="form-inline col 11 modal_seperator_line">
-                                      <label for="Modal_GroupFunction_Description"><h6>Description</h6></label>
-                                      <textarea id="Modal_GroupFunction_Description" class="form-control" name="description" cols="8" rows="2"></textarea>
-                                  </div>
-
-                                  <hr>
-                                  <div class="col-12">
-                                      <label for="chosen_list" class=""><h6>Chosen list:</h6></label>
-                                      <ul class='draggble_ul list-div' id="modal_ul">
-
-                                      </ul>
-                                  </div>
-
-                            </div>
-
-                        </div>
+                      </div>
 
                     <!-- ////////////////// modal right card ////////////////// -->
 
