--- a/Source/templates/new_analyse.html
+++ b/Source/templates/new_analyse.html
@@ -151,13 +151,18 @@
                 <button id="statistics_tab" class="nav-link"><i class="fas fa-chart-pie"></i>&nbsp;Statistics</button>
             </li>
         </ul>
-        <div class="content-flex-container">
+        <div class="">
             <div id="results_div" class="results_div">
                 <table id="results_table" class="table table-striped table-bordered" style="width:100%">
                 </table>
             </div>
             <div id="statistics_table_div" class="statistics" hidden="hidden">
                 <canvas hidden="hidden" id="statistics_chart"></canvas>
+            </div>
+            <div class=" col-8" id="drill_down_table_div">
+                <table id="drill_down_table">
+
+                </table>
             </div>
         </div>
     </div>
